--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1500,7 +1500,7 @@
   mrnumber      = {2419385},
   mrreviewer    = {Simona\ Paoli},
   doi           = {10.1016/j.aim.2008.03.010},
-  url           = {https://doi.org/10.1016/j.aim.2008.03.010},
+  url           = {https://doi.org/10.1016/j.aim.2008.03.010}
 }
 
 @Book{            kallenberg2021,
