feat: more API for the complex of morphisms between cochain complexes

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -630,6 +630,22 @@
   url           = {http://alpha.math.uga.edu/~pete/geometryofnumbers.pdf}
 }
 
+@Book{            conrad2000,
+  author        = {Conrad, Brian},
+  title         = {Grothendieck duality and base change},
+  series        = {Lecture Notes in Mathematics},
+  volume        = {1750},
+  publisher     = {Springer-Verlag, Berlin},
+  year          = {2000},
+  pages         = {vi+296},
+  isbn          = {3-540-41134-8},
+  mrclass       = {14F05 (14A15 14F10 18E30)},
+  mrnumber      = {1804902},
+  mrreviewer    = {J\"{o}rg\ Jahnel},
+  doi           = {10.1007/b75857},
+  url           = {https://doi.org/10.1007/b75857}
+}
+
 @Book{            conway2001,
   author        = {Conway, J. H.},
   title         = {On numbers and games},
