--- a/docs/references.bib
+++ b/docs/references.bib
@@ -357,20 +357,6 @@
   mrnumber      = {2109105}
 }
 
-@Book{            bourbaki1989,
-  author        = {Bourbaki, N.},
-  title         = {Algebra. {II}. {C}hapters 1–3},
-  series        = {Elements of Mathematics},
-  note          = {Translated from the French},
-  year          = {1998},
-  publisher     = {Springer-Verlag, Berlin},
-  isbn          = {3-540-64243-9},
-  pages         = {xxiii + 709},
-  edition       = {Softcover edition of the 2nd printing 1989},
-  msc2010       = {00A05 12-01 15-01 20-01 16-01 17-01 15A69 15A72 15A75 15A78 17D05 20E05 20F16},
-  zmnumber      = {0904.00001}
-}
-
 @Book{            bourbaki1981,
   author        = {Bourbaki, N.},
   title         = {Algebra. {II}. {C}hapters 4--7},
@@ -398,6 +384,21 @@
   mrnumber      = {910295},
   doi           = {10.1007/978-3-642-61715-7},
   url           = {https://doi.org/10.1007/978-3-642-61715-7}
+}
+
+@Book{            bourbaki1989,
+  author        = {Bourbaki, N.},
+  title         = {Algebra. {II}. {C}hapters 1–3},
+  series        = {Elements of Mathematics},
+  note          = {Translated from the French},
+  year          = {1998},
+  publisher     = {Springer-Verlag, Berlin},
+  isbn          = {3-540-64243-9},
+  pages         = {xxiii + 709},
+  edition       = {Softcover edition of the 2nd printing 1989},
+  msc2010       = {00A05 12-01 15-01 20-01 16-01 17-01 15A69 15A72 15A75
+                  15A78 17D05 20E05 20F16},
+  zmnumber      = {0904.00001}
 }
 
 @Book{            bourbaki2007,
@@ -1132,17 +1133,6 @@
   mrnumber      = {2768581}
 }
 
-@Article{         Grillet-1969b,
-  author        = {Grillet, Pierre-Antoine},
-  title         = {The Tensor Product of Commutative Semigroups},
-  year          = {1969},
-  journal       = {Transactions of the American Mathematical Society},
-  volume        = {138},
-  pages         = {281--293},
-  issn          = {0002-9947, 1088-6850},
-  doi           = {10.1090/S0002-9947-1969-0237688-1},
-}
-
 @Article{         Grillet-1969a,
   author        = {Grillet, Pierre-Antoine},
   title         = {The Tensor Product of Semigroups},
@@ -1151,7 +1141,18 @@
   volume        = {138},
   pages         = {267--280},
   issn          = {0002-9947, 1088-6850},
-  doi           = {10.1090/S0002-9947-1969-0237687-X},
+  doi           = {10.1090/S0002-9947-1969-0237687-X}
+}
+
+@Article{         Grillet-1969b,
+  author        = {Grillet, Pierre-Antoine},
+  title         = {The Tensor Product of Commutative Semigroups},
+  year          = {1969},
+  journal       = {Transactions of the American Mathematical Society},
+  volume        = {138},
+  pages         = {281--293},
+  issn          = {0002-9947, 1088-6850},
+  doi           = {10.1090/S0002-9947-1969-0237688-1}
 }
 
 @Unpublished{     grinberg_clifford_2016,
