feat(CategoryTheory): morphisms of localizers (#6869)
This PR introduces the categorical notion of morphisms of localizers.



Co-authored-by: Joël Riou <37772949+joelriou@users.noreply.github.com>

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1486,6 +1486,23 @@
   publisher     = {Elsevier {BV}}
 }
 
+@Article{         KahnMaltsiniotis2008,
+  author        = {Kahn, Bruno and Maltsiniotis, Georges},
+  title         = {Structures de d\'{e}rivabilit\'{e}},
+  journal       = {Adv. Math.},
+  fjournal      = {Advances in Mathematics},
+  volume        = {218},
+  year          = {2008},
+  number        = {4},
+  pages         = {1286--1318},
+  issn          = {0001-8708,1090-2082},
+  mrclass       = {18G55 (18A40 18E25 18E35 18G10 55P60 55U35)},
+  mrnumber      = {2419385},
+  mrreviewer    = {Simona\ Paoli},
+  doi           = {10.1016/j.aim.2008.03.010},
+  url           = {https://doi.org/10.1016/j.aim.2008.03.010}
+}
+
 @Book{            kallenberg2021,
   author        = {Olav Kallenberg},
   title         = {Foundations of modern probability},
