--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2329,7 +2329,7 @@
   mrreviewer    = {J. Segal}
 }
 
-@article{         Strojnowski1980,
+@Article{         Strojnowski1980,
   author        = {Andrzej Strojnowski},
   title         = {A note on u.p. groups},
   journal       = {Communications in Algebra},
