doc: fix an author field in references

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1191,7 +1191,7 @@
 }
 
 @Article{         erdosrenyisos,
-  author        = {P. Erd\"os, A.R\'enyi, and V. S\'os},
+  author        = {P. Erd\"os and A. R\'enyi and V. S\'os},
   title         = {On a problem of graph theory},
   journal       = {Studia Sci. Math.},
   number        = {1},
