--- a/docs/references.bib
+++ b/docs/references.bib
@@ -608,7 +608,7 @@
 }
 
 @Book{            cabreragarciarodriguezpalacios2014,
-  author        = {Miguel {Cabrera Garc\'{\i}a} and \'Angel {Rodr\'{\i}guez
+  author        = {Miguel {Cabrera Garc\'ia} and \'Angel {Rodr\'iguez
                   Palacios}},
   title         = {{Non-associative normed algebras. Volume 1. The
                   Vidav-Palmer and Gelfand-Naimark theorems}},
