doc: fix some author fields in references (#14391)

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -622,7 +622,7 @@
 }
 
 @Book{            cabreragarciarodriguezpalacios2014,
-  author        = {Miguel {Cabrera Garc\'{\i}a} and \'Angel {Rodr\'{\i}guez
+  author        = {Miguel {Cabrera Garc\'ia} and \'Angel {Rodr\'iguez
                   Palacios}},
   title         = {{Non-associative normed algebras. Volume 1. The
                   Vidav-Palmer and Gelfand-Naimark theorems}},
@@ -1205,7 +1205,7 @@
 }
 
 @Article{         erdosrenyisos,
-  author        = {P. Erd\"os, A.R\'enyi, and V. S\'os},
+  author        = {P. Erd\"os and A. R\'enyi and V. S\'os},
   title         = {On a problem of graph theory},
   journal       = {Studia Sci. Math.},
   number        = {1},
