docs: fix references.bib

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -144,7 +144,8 @@
   author        = {Jeremy Avigad and Leonardo de Moura and Soonho Kong},
   title         = {{T}heorem {P}roving in {L}ean},
   year          = {2017},
-  howpublished  = {\url{https://leanprover.github.io/theorem_proving_in_lean/}}
+  howpublished  = {},
+  url           = {https://leanprover.github.io/theorem_proving_in_lean/}
 }
 
 @Book{            axler2015,
@@ -1376,8 +1377,8 @@
   pages         = {58--78},
   publisher     = {Springer},
   year          = {2020},
-  url           = {https://doi.org/10.1007/978-3-030-51054-1\_4},
-  doi           = {10.1007/978-3-030-51054-1\_4},
+  url           = {https://doi.org/10.1007/978-3-030-51054-1_4},
+  doi           = {10.1007/978-3-030-51054-1_4},
   timestamp     = {Mon, 06 Jul 2020 09:05:32 +0200},
   biburl        = {https://dblp.org/rec/conf/cade/FurerLST20.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
@@ -2148,7 +2149,7 @@
 
 @Article{         kleiman1979,
   author        = {Kleiman, Steven Lawrence},
-  title         = {Misconceptions about {$K\_X$}},
+  title         = {Misconceptions about {$K_X$}},
   journal       = {Enseign. Math. (2)},
   volume        = {25},
   year          = {1979},
