feat(RingTheory/Unramified): Unramified + free => finite (#14478)
Co-authored-by: Andrew Yang <36414270+erdOne@users.noreply.github.com>

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1904,6 +1904,18 @@
   url           = {https://doi.org/10.1007/978-1-4757-2103-4}
 }
 
+@Book{            iversen,
+  title         = {Generic Local Structure of the Morphisms in Commutative
+                  Algebra},
+  author        = {Birger Iversen},
+  series        = {Lecture Notes in Mathematics},
+  volume        = {310},
+  year          = {2006},
+  publisher     = {Springer Berlin, Heidelberg},
+  doi           = {10.1007/BFb0060790},
+  isbn          = {978-3-540-06137-3}
+}
+
 @Book{            iyengaretal07,
   author        = {Iyengar, Srikanth B. and Leuschke, Graham J. and Leykin,
                   Anton and Miller, Claudia and Miller, Ezra and Singh,
