correct reference about McCoy and add reference in the bibtex file

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1223,6 +1223,17 @@
   mrnumber      = {1194995}
 }
 
+@article{         Fields1971,
+  author        = {Fields, David E.},
+  title         = {Zero divisors and nilpotent elements in power series rings},
+  year          = {1971},
+  journal       = {Proceedings of the American Mathematical Society},
+  volume        = {27},
+  number        = {3},
+  pages         = {427–433},
+  ISSN          = {0002-9939, 1088-6826},
+  DOI           = {10.1090/S0002-9939-1971-0271100-6} }
+
 @InProceedings{   flypitch_cpp,
   doi           = {10.1145/3372885.3373826},
   url           = {https://doi.org/10.1145/3372885.3373826},
