yet another fix on the bib file

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1233,7 +1233,8 @@
   number        = {3},
   pages         = {427–433},
   issn          = {0002-9939, 1088-6826},
-  doi           = {10.1090/S0002-9939-1971-0271100-6} }
+  doi           = {10.1090/S0002-9939-1971-0271100-6}
+}
 
 @InProceedings{   flypitch_cpp,
   doi           = {10.1145/3372885.3373826},
