--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1258,6 +1258,19 @@
   mrnumber      = {1194995}
 }
 
+@Article{         Fields1971,
+  author        = {Fields, David E.},
+  title         = {Zero divisors and nilpotent elements in power series
+                  rings},
+  year          = {1971},
+  journal       = {Proceedings of the American Mathematical Society},
+  volume        = {27},
+  number        = {3},
+  pages         = {427–433},
+  issn          = {0002-9939, 1088-6826},
+  doi           = {10.1090/S0002-9939-1971-0271100-6}
+}
+
 @InProceedings{   flypitch_cpp,
   doi           = {10.1145/3372885.3373826},
   url           = {https://doi.org/10.1145/3372885.3373826},
