--- a/docs/references.bib
+++ b/docs/references.bib
@@ -44,12 +44,16 @@
   doi           = {10.23638/LMCS-15(1:20)2019}
 }
 
-@Article{         aigner1999proofs,
-  author        = {Aigner, Martin and Ziegler, G{\"u}nter M},
-  title         = {Proofs from THE BOOK},
-  journal       = {Berlin. Germany},
-  year          = {1999},
-  publisher     = {Springer}
+@Book{            aigner1999proofs,
+  author        = {Aigner, Martin and Ziegler, G{\"u}nter M.},
+  title         = {Proofs from {THE} {BOOK}},
+  isbn          = {3-540-63698-6},
+  year          = {1998},
+  publisher     = {Berlin: Springer},
+  language      = {English},
+  keywords      = {00A05,11-01,05-01,52-01,26-01},
+  zbmath        = {1188564},
+  zbl           = {0905.00001}
 }
 
 @Misc{            aignerhorev2012infinite,
