coefficients of powers of MvPowerSeries

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -541,6 +541,20 @@
   zmnumber      = {0904.00001}
 }
 
+@Book{            bourbaki-algebraII
+  author        = {Bourbaki, Nicolas},
+  translator    = {Cohn, P. M and Howie, J.},
+  title         = {Elements of Mathematics. {{Algebra II}}. {{Chapters}} 4-7},
+  year          = {2003},
+  note          = {Translated from the French by {P. M. Cohn} and {J. {Howie}}.
+    {{Reprint}} of the 1990 English Translation.},
+  edition       = {Reprint of the 1990 English translation},
+  publisher     = {Springer-Verlag, Berlin},
+  isbn          = {3-540-00706-7},
+  msc2010       = {12-02 13-02 00A05 12Fxx 12J15 13F10 13C10 12E05 06F15 05E05},
+  zmnumber      = {1017.12001}
+}
+
 @Book{            bourbaki2007,
   author        = {Bourbaki, Nicolas},
   edition       = {Réimpression inchangée de l'édition originale de 1959},
