--- a/docs/references.bib
+++ b/docs/references.bib
@@ -544,13 +544,26 @@
 @Book{            bourbaki2007,
   author        = {Bourbaki, Nicolas},
   edition       = {Réimpression inchangée de l'édition originale de 1959},
-  series        = {Eléments de mathématique},
+  series        = {Éléments de mathématique},
   title         = {Algèbre. {C}hapitre IX},
   isbn          = {978-3-540-35338-6},
   language      = {fr},
   number        = {2},
   publisher     = {Springer},
   year          = {2007}
+}
+
+@book {bourbaki1964,
+    AUTHOR = {Bourbaki, Nicolas},
+     TITLE = {Éléments de mathématique. {F}asc. {XXX}. {A}lgèbre
+              commutative. {C}hapitre 5: {E}ntiers. {C}hapitre 6:
+              {V}aluations},
+    SERIES = {Actualités Scientifiques et Industrielles},
+    VOLUME = {No. 1308},
+ PUBLISHER = {Hermann, Paris},
+      YEAR = {1964},
+     PAGES = {207},
+     language = {fr}
 }
 
 @Book{            bourbaki2023,
