Introduce intermediary between NFA and RegEx

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3536,6 +3536,18 @@
   zbl           = {1052.54001}
 }
 
+@Book{            zbMATH05595151,
+  author        = {Sipser, Michael},
+  title         = {Introduction to the theory of computation.},
+  isbn          = {0-534-94728-X},
+  year          = {1997},
+  publisher     = {Boston, MA: PWS Publishing},
+  language      = {English},
+  keywords      = {68-01,68Q05,68Q15,68W05},
+  zbmath        = {5595151},
+  zbl           = {1169.68300}
+}
+
 @Article{         zbMATH06785026,
   author        = {John F. {Clauser} and Michael A. {Horne} and Abner
                   {Shimony} and Richard A. {Holt}},
