--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2708,7 +2708,7 @@
   title          = {PERFECT NUMBERS, ABUNDANT NUMBERS, AND DEFICIENT NUMBERS},
   journal        = {The Mathematics Teacher},
   volume         = {63},
-  year           = {1970}
+  year           = {1970},
   pages          = {692--696},
   issn           = {00255769},
   url            = {http://www.jstor.org/stable/27958492},
