--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2711,7 +2711,7 @@
   year          = {1970},
   pages         = {692--696},
   issn          = {00255769},
-  url           = {http://www.jstor.org/stable/27958492},
+  url           = {http://www.jstor.org/stable/27958492}
 }
 
 @InCollection{    ribenboim1971,
