--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2078,7 +2078,8 @@
 
 @Book{juvskevivc2022,
   author        = {Ju{\v{s}}kevi{\v{c}}, Adolf P and Winter, Eduard},
-  title         = {Leonhard Euler und Christian Goldbach: Briefwechsel 1729--1764},
+  title         = {Leonhard Euler und Christian Goldbach: Briefwechsel
+                  1729--1764},
   year          = {2022},
   publisher     = {Walter de Gruyter GmbH \& Co KG}
 }
