Basic definition of quantale.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3245,6 +3245,15 @@
   mrnumber      = {1453167}
 }
 
+@Book{            vickers1989,
+  author        = {Vickers, Steven},
+  title         = {Topology via Logic},
+  isbn          = {0-521-57651-2},
+  year          = {1989},
+  publisher     = {University of Cambridge},
+  language      = {English}
+}
+
 @Book{            wall2018analytic,
   title         = {Analytic Theory of Continued Fractions},
   author        = {Wall, H.S.},
