--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2118,6 +2118,20 @@
   url           = {https://doi.org/10.1007/978-3-030-61871-1}
 }
 
+@Article{         kaplansky1949,
+  ISSN          = {00029947, 10886850},
+  URL           = {http://www.jstor.org/stable/1990591},
+  author        = {Irving Kaplansky},
+  journal       = {Transactions of the American Mathematical Society},
+  number        = {2},
+  pages         = {464--491},
+  publisher     = {American Mathematical Society},
+  title         = {Elementary Divisors and Modules},
+  urldate       = {2024-09-29},
+  volume        = {66},
+  year          = {1949}
+}
+
 @Article{         Karner2004,
   author        = {Karner, Georg},
   title         = {Continuous monoids and semirings},
