--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2119,8 +2119,8 @@
 }
 
 @Article{         kaplansky1949,
-  ISSN          = {00029947, 10886850},
-  URL           = {http://www.jstor.org/stable/1990591},
+  issn          = {00029947, 10886850},
+  url           = {http://www.jstor.org/stable/1990591},
   author        = {Irving Kaplansky},
   journal       = {Transactions of the American Mathematical Society},
   number        = {2},
