feat: drop finite-dimensionality assumption from `PerfectPairing.restrictScalarsField`

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -554,7 +554,7 @@
 
 @Book{            bourbaki1989,
   author        = {Bourbaki, N.},
-  title         = {Algebra. {II}. {C}hapters 1–3},
+  title         = {Algebra. {I}. {C}hapters 1–3},
   series        = {Elements of Mathematics},
   note          = {Translated from the French},
   year          = {1998},
