Add some documentation

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1048,6 +1048,24 @@
   url           = {https://doi.org/10.1017/CBO9780511809088}
 }
 
+@Book{            davidson1988,
+  author        = {Davidson, Kenneth R.},
+  title         = {Nest algebras. {Triangular} forms for operator algebras on
+                  {Hilbert} space},
+  fseries       = {Pitman Research Notes in Mathematics Series},
+  series        = {Pitman Res. Notes Math. Ser.},
+  issn          = {0269-3674},
+  volume        = {191},
+  isbn          = {0-582-01993-1; 0-470-21240-3},
+  year          = {1988},
+  publisher     = {Harlow (UK): Longman Scientific \&| Technical; New York:
+                  Wiley},
+  language      = {English},
+  keywords      = {47L30,47B10,47-02,47A15,46L05,46-02},
+  zbmath        = {41508},
+  zbl           = {0669.47024}
+}
+
 @Article{         day1972,
   author        = {Day, Brian},
   title         = {A reflection theorem for closed categories},
@@ -2504,6 +2522,23 @@
   eprint        = {1106.3249},
   archiveprefix = {arXiv},
   primaryclass  = {math.GT}
+}
+
+@Article{         Mesyan2018,
+  author        = {Mesyan, Zachary},
+  title         = {Infinite-dimensional triangularization},
+  fjournal      = {Journal of Pure and Applied Algebra},
+  journal       = {J. Pure Appl. Algebra},
+  issn          = {0022-4049},
+  volume        = {222},
+  number        = {7},
+  pages         = {1529--1547},
+  year          = {2018},
+  language      = {English},
+  doi           = {10.1016/j.jpaa.2017.07.010},
+  keywords      = {15A04,15A21,16S50,16W80},
+  zbmath        = {6846316},
+  zbl           = {1383.15003}
 }
 
 @Book{            MeyerNieberg1991,
