feat(RingTheory/Derivation/Basic): define lifting a derivation via an algebra homomorphism (#16792)

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2985,6 +2985,22 @@
   url           = "https://math.stanford.edu/~vakil/216blog/"
 }
 
+@Article{         Rosenlicht_1972,
+  author        = {Rosenlicht, Maxwell},
+  title         = {Integration in finite terms},
+  fjournal      = {American Mathematical Monthly},
+  journal       = {Am. Math. Mon.},
+  issn          = {0002-9890},
+  volume        = {79},
+  pages         = {963--972},
+  year          = {1972},
+  language      = {English},
+  doi           = {10.2307/2318066},
+  keywords      = {12H05},
+  zbmath        = {3394287},
+  zbl           = {0249.12106}
+}
+
 @Book{            rudin2006real,
   title         = {Real and Complex Analysis},
   author        = {Rudin, Walter},
