--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3011,8 +3011,8 @@
 }
 
 @Article{         Roby-1963,
-  title         = {{Lois polynomes et lois formelles en théorie des
-                  modules}},
+  title         = {Lois polynomes et lois formelles en théorie des
+                  modules},
   author        = {Roby, Norbert},
   year          = {1963},
   journal       = {Annales scientifiques de l'École Normale Supérieure},
@@ -3022,9 +3022,6 @@
   doi           = {10.24033/asens.1124},
   urldate       = {2022-09-15},
   langid        = {french},
-  file          = {/Users/chambert/Zotero/storage/NY4DJG6S/Roby - 1963 - Lois
-                  polynomes et lois formelles en théorie des
-                  mo.pdf;/Users/chambert/Zotero/storage/PBM9GNHN/ASENS_1963_3_80_3_213_0.html}
 }
 
 @Article{         Roby-1965,
@@ -3034,8 +3031,7 @@
   journal       = {Bulletin des Sciences Mathématiques. Deuxième Série},
   volume        = {89},
   pages         = {75--91},
-  file          = {/Users/chambert/Zotero/storage/XC232TJE/Roby - 1965 - Les
-                  algèbres à puissances divisées.pdf}
+}
 
 @Article{         Rosenlicht_1972,
   author        = {Rosenlicht, Maxwell},
