doc(IncidenceAlgebra): reference the correct Jacobson book I accidentally referenced the second book instead of the first.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,4 @@
-
+k
 # To normalize:
 # bibtool --preserve.key.case=on --preserve.keys=on --pass.comments=on --print.use.tab=off -s -i docs/references.bib -o docs/references.bib
 
@@ -2097,6 +2097,17 @@
   keywords      = {16-02},
   zbmath        = {3121681},
   zbl           = {0073.02002}
+}
+
+@book {jacobson1974,
+    AUTHOR = {Jacobson, Nathan},
+     TITLE = {Basic algebra. {I}},
+ PUBLISHER = {W. H. Freeman and Co., San Francisco, CA},
+      YEAR = {1974},
+     PAGES = {xvi+472},
+   MRCLASS = {00A05},
+  MRNUMBER = {356989},
+MRREVIEWER = {M.\ F.\ Smiley},
 }
 
 @Book{            jacobson1989,
