--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,5 @@
 k
+
 # To normalize:
 # bibtool --preserve.key.case=on --preserve.keys=on --pass.comments=on --print.use.tab=off -s -i docs/references.bib -o docs/references.bib
 
@@ -2099,15 +2100,15 @@ k
   zbl           = {0073.02002}
 }
 
-@book {jacobson1974,
-    AUTHOR = {Jacobson, Nathan},
-     TITLE = {Basic algebra. {I}},
- PUBLISHER = {W. H. Freeman and Co., San Francisco, CA},
-      YEAR = {1974},
-     PAGES = {xvi+472},
-   MRCLASS = {00A05},
-  MRNUMBER = {356989},
-MRREVIEWER = {M.\ F.\ Smiley},
+@Book{            jacobson1974,
+  author        = {Jacobson, Nathan},
+  title         = {Basic algebra. {I}},
+  publisher     = {W. H. Freeman and Co., San Francisco, CA},
+  year          = {1974},
+  pages         = {xvi+472},
+  mrclass       = {00A05},
+  mrnumber      = {356989},
+  mrreviewer    = {M.\ F.\ Smiley}
 }
 
 @Book{            jacobson1989,
