feat(Wiedijk100Theorems): roots of a quartic (#18290)
* Added `quartic_eq_zero_iff` which gives the roots of the quartic equation in terms of a root `u` to a particular cubic equation, and a degenerate case `quartic_eq_zero_iff_of_q_eq_zero`
* Simplified the cubic proof

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3585,3 +3585,11 @@
   doi           = {10.1090/S0002-9904-1937-06565-7},
   url           = {https://doi.org/10.1090/S0002-9904-1937-06565-7}
 }
+
+@Book{            zwillinger2003,
+  title         = {CRC standard mathematical tables and formulae},
+  publisher     = {chapman and hall/CRC},
+  author        = {Zwillinger, Daniel},
+  year          = {2003},
+  edition       = {31st ed.}
+}
