--- a/docs/references.bib
+++ b/docs/references.bib
@@ -2099,6 +2099,17 @@
   zbl           = {0073.02002}
 }
 
+@Book{            jacobson1974,
+  author        = {Jacobson, Nathan},
+  title         = {Basic algebra. {I}},
+  publisher     = {W. H. Freeman and Co., San Francisco, CA},
+  year          = {1974},
+  pages         = {xvi+472},
+  mrclass       = {00A05},
+  mrnumber      = {356989},
+  mrreviewer    = {M.\ F.\ Smiley}
+}
+
 @Book{            jacobson1989,
   author        = {Jacobson, Nathan},
   title         = {Basic algebra. {II}},
